--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: background_locator_2_example
-description: Demonstrates how to use the background_locator_2 plugin.
+name: background_locator_example
+description: Demonstrates how to use the background_locator plugin.
 publish_to: 'none'
 
 environment:
@@ -17,7 +17,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  background_locator_2:
+  background_locator:
     path: ../
 
   path_provider: ^2.0.8
