chore: rename package for publish

--- a/android/.project
+++ b/android/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>background_locator</name>
+	<name>cactus_locator</name>
 	<comment>Project android__ created by Buildship.</comment>
 	<projects>
 	</projects>
