--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: background_locator
+name: cactus_locator
 description: A Flutter plugin to request the location even if the app is killed. Sending the location to a dart function in background, also provide a meter filter
 version: 1.0.0
 homepage: https://github.com/kuloud/background_locator_fixed
@@ -6,7 +6,6 @@ issue_tracker: https://github.com/kuloud/background_locator_fixed/issues
 platforms:
   android:
   ios:
-
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
