--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,9 +6,12 @@ issue_tracker: https://github.com/kuloud/background_locator_fixed/issues
 platforms:
   android:
   ios:
+publish_to: https://pub.dartlang.org
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
+  flutter: ">=3.0.0"
+  
 dependencies:
   flutter:
     sdk: flutter
